Troubleshooting changes to stop double-tap zooming on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
     background-color: #393E46;
     font-family: Assistant, sans-serif;
     font-size: 20px;
+    touch-action: manipulation;
 }
 
 a:link {
@@ -15,6 +16,10 @@ a:link {
   a:visited {
     text-decoration: none;
     color: #EEEEEE;
+  }
+
+  div {
+      touch-action: manipulation;
   }
 
 /* ...............................................................NAVBAR */
@@ -115,6 +120,7 @@ a:link {
     opacity: 1;
     background-image: radial-gradient(#b9b9b9 1px, #EEEEEE 1px);
     background-size: 20px 20px;
+    touch-action: manipulation;
 }
 
 /* ...............................................................GAME AREA */
@@ -134,6 +140,7 @@ a:link {
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    touch-action: manipulation;
 }
 
 .game-area div {
@@ -143,7 +150,6 @@ a:link {
     background-size: cover;
     touch-action: none;
     user-select: none;
-    touch-action: manipulation;
 }
 
 .game-area div:hover {
